--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cosmeticos-angular",
+  "name": "surfshop-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "node server-json.js"
+    "server": "node server.js"
   },
   "private": true,
   "type": "module",
@@ -16,6 +16,7 @@
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
+    "@libsql/client": "^0.6.0",
     "@angular/forms": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
